# agentkernel

./: .editorconfig  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-build.yml
agentkernel/: __init__.py  __main__.py  canonical.py  cli.py  demo.py  errors.py  ids.py
agentkernel/adapters/: __init__.py  base.py  filesystem.py  mock.py  registry.py
agentkernel/authority/: __init__.py  evaluator.py  service.py
agentkernel/domain/: __init__.py  enums.py  models.py
agentkernel/evidence/: __init__.py  artifacts.py  ledger.py
agentkernel/model_gateway/: __init__.py  gateway.py
agentkernel/normalization/: __init__.py  base.py  filesystem.py  limits.py  registry.py
agentkernel/policies/: system-base.yaml
agentkernel/policy/: __init__.py  aggregation.py  engine.py
agentkernel/replay/: __init__.py  models.py
agentkernel/sandbox/: __init__.py  docker.py
agentkernel/snapshots/: __init__.py  filesystem.py
agentkernel/storage/: __init__.py  control.py  sqlite.py
agentkernel/transactions/: __init__.py  coordinator.py  state_machine.py
docs/: architecture.md
docs/adr/: 0000-template.md  0001-canonical-json.md  0002-project-and-distribution-names.md  0003-specification-interpretation-and-release-gates.md  0004-normalization-and-a1-authorization-order.md
docs/concepts/: assurance-levels.md
docs/project/: requirements-traceability.md
docs/security/: threat-model.md
requirements/: README.md  id-registry.json  traceability-policy.json  traceability.json  traceability.schema.json
requirements/source/: AgentKernel_Full_Project_Specification.md
schemas/v1alpha1/: ActionExecutionRecord.schema.json  ActionProposal.schema.json  AggregatePolicyDecision.schema.json  Artifact.schema.json  AuthenticatedActionContext.schema.json  AuthorityEvaluationContext.schema.json  AuthoritySnapshot.schema.json  BenchmarkTask.schema.json  CapabilityBudgetState.schema.json  CapabilityGrant.schema.json  CapabilityKeyVersion.schema.json  CapabilityReservationPlan.schema.json  CapabilityRevocation.schema.json  DemoReport.schema.json  EffectReceipt.schema.json  EnforcedAuthorityDecision.schema.json  EnforcedCapabilityGrant.schema.json  EventEnvelope.schema.json  FilesystemNormalizerConfig.schema.json  GoalRecord.schema.json  IntentRecord.schema.json  MessagePart.schema.json  ModelInferenceReceipt.schema.json  ModelInferenceRequest.schema.json  ModelResponse.schema.json  NormalizedAction.schema.json  NormalizedIntentProjection.schema.json  NormalizedProvenance.schema.json  NormalizerManifest.schema.json  PolicyBundle.schema.json  PolicyContext.schema.json  PolicyDecision.schema.json  PolicyLayerDecisionEvidence.schema.json  PolicyLayerIdentity.schema.json  PolicyLayerInput.schema.json  PolicyLayerSnapshot.schema.json  PolicyResourceInput.schema.json  ProvenanceRecord.schema.json  (+8 more)
scripts/: build_traceability.py  check.ps1  check.sh  validate_traceability.py
tests/: conftest.py
(+24 files in other folders)
